test_src/compiler_errors/types/arithmetic/SubtractBoolError3.b
class SubtractBoolError3 {
    void test() {
        var value = 2;
        println(value -= false);
    }
}
